--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 
 
 # Base dependencies
-requests
-pip install supabase
-pip install python-dotenv
+requests;
+pip install supabase;
+pip install python-dotenv;
 
